@@ -1,5 +1,9 @@
 2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>
 
+	* DockPanelTest.cs: Added.
+
+2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>
+
 	* TabControlTest.cs: Added.
 
 2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>
